# pickfun

./: .flake8  README.rst  noxfile.py  pyproject.toml
pickfun/: __init__.py  pickfun.py
tests/: test_pickfun.py
