[tool.poetry]
name = "pickfun"
version = "0.1.0"
description = ""
authors = ["Will Holtz <wholtz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
humanize = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
nox = "^2020.12.31"
flake8 = "^3.9.0"
pylint = "^2.7.2"
mypy = "^0.812"
black = "^20.8b1"
flake8-bugbear = "^21.3.2"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.4.0"
flake8-string-format = "^0.3.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
